--- a/.github/workflows/build-picons-snp.yml
+++ b/.github/workflows/build-picons-snp.yml
@@ -1,4 +1,4 @@
-name: Build Picons
+name: Build Picons SNP
 on:
   release:
     types: [published]
@@ -14,10 +14,9 @@ jobs:
         sudo apt update
         sudo apt install -y --no-install-recommends --no-install-suggests git xz-utils binutils pngquant imagemagick librsvg2-bin jq
         bash 2-build-picons.sh snp-full
-        bash 2-build-picons.sh srp-full
     - name: Upload the picons
       uses: skx/github-action-publish-binaries@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        args: 'build-output/binaries-*-full/*'
+        args: 'build-output/binaries-snp-full/*'
